--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_weight="1"
@@ -99,10 +99,11 @@
             android:text="Forget Password?" />
 
         <Button
-            android:id="@+id/signinButton"
+            android:id="@+id/signInButton"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@android:color/holo_blue_dark"
+            android:onClick="onClickSignIn"
             android:text="Sign In" />
 
         <LinearLayout
