--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <ImageView
         android:id="@+id/walmartLogo"
@@ -148,6 +148,7 @@
             android:layout_height="40dp"
             android:layout_weight="1"
             android:background="?attr/colorButtonNormal"
+            android:onClick="onClickRegister"
             android:text="Create a new account"
             android:textColor="@android:color/holo_blue_dark"
             android:textStyle="bold" />
